<resources>
    <string name="app_name">MSA</string>
    <string name="action_settings">Settings</string>
    <string name="action_signOut">SignOut</string>
    <string name="action_upload">Upload Image</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="action_search">Search</string>
    <string name="mo_school_abhiyan">Mo School Abhiyan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="save">Save</string>
    <string name="signup_msg">Do not have account?.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset</string>
    <string name="welcome_msg">Welcome to Mo School Abhiyan .</string>
    <string name="copy_right"> Pranabandhu Bidyapitha, Shibapura, Bahanaga, Balasore, 756042.</string>
    <string name="school_address"><b> Pranabandhu Bidyapitha, \n Shibapura, Bahanaga, \n Balasore,PIN:- 756042.</b></string>
    <string name="title_csv"><b>Mo School Abhiyan </b></string>
    <string name="already_have_an_account_login">Already have an account login</string>
    <string name="valid_mail_id">Please enter your valid mail id</string>
    <string name="login_success_msg">Login Successfully</string>
    <string name="action_login_fail">Login Fail !!!</string>
    <string name="login_failure_msg">Please enter your valid email id.</string>
    <string name="login_create_new_account_msg">Please check your emailId and password.</string>
    <string name="login_db_empty_msg">Please create new account.\n If you have account, Please contact your Headmaster.</string>
    <string name="login_no_empty_field_msg">Please enter all the field</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_clear_button">Clear</string>
    <string name="dialog_no_button">No</string>
    <string name="dialog_ok_button">OK</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="email_id">Email Id</string>
    <string name="phone_no">Phone No</string>
    <string name="year">Year of Pass</string>
    <string name="amount">Amount</string>

    <string name="menu_student_list">StudentDetails</string>
    <string name="menu_student_registration">Registration</string>
    <string name="menu_photo_gallery">Gallery</string>
    <string name="menu_student_graph">Graph</string>

    <string name="list_header_name">Name</string>
    <string name="list_header_email">Email</string>
    <string name="list_header_year">Batch</string>
    <string name="list_header_phone">Phone</string>
    <string name="list_header_amount">Amount</string>
    <string name="list_header_date">Date</string>
    <string name="list_header_payment_mode"> Mode</string>
    <string name="list_header_status"> Status</string>
    <string name="search_header">Enter year</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="payment_status">Payment Status</string>
    <string name="message_received_from">Msg Received From</string>
    <string name="total_amount">Total Collection Amount : - \u20B9</string>
    <string name="donor">Donor</string>
    <string name="signup_me">Signup</string>
    <string name="data_saved">Registration Done Successfully</string>
    <string name="data_saved_fb">Data Save Successfully</string>
    <string name="signup_fail"> Fail</string>
    <string name="signup_not_done">Registration  Not Done Successfully</string>
    <string name="loader_message">Registering User</string>
    <string name="unable_to_reset">Unable to reset your password,Please check your email Id</string>
    <string name="data_not_saved_fb">Data Fail To Save </string>
    <string name="search_bar">Search</string>
    <string name="gmail_message">Thanks for your support to Mo School Abhiyan \n \n  Regards,\n \n Headmaster,\n Pranabandhu Bidyapitha,\n Shibapura,Bahanaga \n Balasore, 756042.</string>
    <string name="check_your_internet">Please Check Your Internet,Otherwise we are unable to show your data</string>
    <string name="check_your_connectivity">Connectivity Check !!!</string>
    <string name="valid_year">Not Valid Year</string>
    <string name="year_not_valid">Please enter year 1983 to on wards and upto current year</string>
    <string name="meeting_request">Hi Teams, \n\n We all developers need your support to host our school website,though it is in complete stage. Can you please join the coming alumni meeting.\n Please join below link \n\n https://teams.live.com/meet/955366641118 \n\n Regards, \n\n Satyaranjan Behera \n (Batch:-1994) \n Mob ile No:-+91 8754330570</string>
</resources>