<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sltudent_details"
            android:icon="@drawable/clipboard_multiple_outline"
            android:title="@string/menu_student_list" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/clipboard_text"
            android:title="@string/menu_student_registration" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/image_gallery_24"
            android:title="@string/menu_photo_gallery" />

        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/icons_graph_24"
            android:title="@string/menu_student_graph" />

    </group>
</menu>