<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sltudent_details">
    <fragment
        android:id="@+id/nav_sltudent_details"
        android:name="com.satyasoft.myschoolavhiyan.activity.ui.studentDetails.StudentDetailInfoFragment"
        android:label="@string/menu_student_list"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_registration"
        android:name="com.satyasoft.myschoolavhiyan.activity.ui.studentRestration.RegistrationFragment"
        android:label="@string/menu_student_registration"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.satyasoft.myschoolavhiyan.activity.ui.studentGallery.StudentGalleryFragment"
        android:label="@string/menu_photo_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.satyasoft.myschoolavhiyan.activity.ui.graphDetails.StudentDetailsInGraph"
        android:label="@string/menu_student_graph"
        tools:layout="@layout/fragment_graph" />


</navigation>