<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/school_admission"
        />

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_below="@id/logo"
        android:text="@string/welcome_msg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:fontFamily="@font/font_opensans_light"
        android:textColor="@color/white"
        android:textSize="20sp">

    </TextView>

    <LinearLayout
        android:id="@+id/centerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            app:placeholderText="satya@gmail.com"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent"
            app:boxStrokeColor = "@android:color/white"
            style="@style/LoginTextInputLayoutStyle"
            app:placeholderText="12345sb"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="8dp"
            app:rippleColor="@color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />
    </LinearLayout>
<LinearLayout
    android:id="@+id/bottomView"
    android:layout_below="@id/centerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/forgotPassword"
        android:text="@string/forgot_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_conner_outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:fontFamily="@font/font_opensans_light"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/Message"
        android:text="@string/signup_msg"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/font_opensans_light"
        android:textColor="@color/white"
        android:textSize="20sp">

    </TextView>
        <TextView
            android:id="@+id/signup"
            android:text="@string/signup"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_conner_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:fontFamily="@font/font_opensans_light"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>

</LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/bottomView"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="20dp"
       android:orientation="vertical">
       <TextView
           android:id="@+id/copyright"
           android:text="@string/copy_right"
           android:layout_marginEnd="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:ellipsize="marquee"
           android:marqueeRepeatLimit="@android:integer/config_longAnimTime"
           android:padding="10dp"
           android:scrollHorizontally="true"
           android:singleLine="true"
           android:fontFamily="@font/font_opensans_light"
           android:textColor="@color/white"
           android:textSize="16sp">
       </TextView>
   </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBarLarge"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</RelativeLayout>

