<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".activity.ui.restration.RegistrationFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/school_admission"
            />

        <LinearLayout
            android:id="@+id/centerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginTextInputLayoutStyle"
                app:placeholderText="Satyaranjan Behera"
                android:hint="@string/username">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="text"
                    android:focusable="true"
                    android:imeOptions="actionNext"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                app:boxStrokeColor = "@android:color/white"
                style="@style/LoginTextInputLayoutStyle"
                app:placeholderText="satya@gmail.com"
                android:hint="@string/email_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                app:boxStrokeColor = "@android:color/white"
                style="@style/LoginTextInputLayoutStyle"
                app:placeholderText="9454330560"
                android:hint="@string/phone_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                app:boxStrokeColor = "@android:color/white"
                style="@style/LoginTextInputLayoutStyle"
                app:placeholderText="1994"
                android:hint="@string/year">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/yearOfPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:inputType="date"
                    android:imeOptions="actionNext"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@android:color/transparent"
                app:boxStrokeColor = "@android:color/white"
                style="@style/LoginTextInputLayoutStyle"
                app:placeholderText="50000"
                android:hint="@string/amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="8dp"
                app:rippleColor="@color/white"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>